[gd_scene load_steps=3 format=3 uid="uid://bwd5l5p51dkyj"]

[ext_resource type="StyleBox" uid="uid://mw8dmdnlb4k5" path="res://assets/styles/panel_style.tres" id="1_s4bos"]
[ext_resource type="Script" uid="uid://rbycnsonngxj" path="res://main/interface/selection_panel/selection_panel.gd" id="2_vfaqe"]

[node name="SelectionPanel" type="PanelContainer"]
custom_minimum_size = Vector2(330, 0)
theme_override_styles/panel = ExtResource("1_s4bos")
script = ExtResource("2_vfaqe")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LeftButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "<"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Label"
horizontal_alignment = 1

[node name="RightButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = ">"
